@@ -1077,8 +1077,8 @@
   <string><id>13293</id><value>Video &amp; XBE Region:</value></string>
   <string><id>13294</id><value>DVD Region:</value></string>
   <string><id>13295</id><value>Internet:</value></string>
-  <string><id>13296</id><value>Xbox is Connected!</value></string>
-  <string><id>13297</id><value>Xbox is NOT Connected! Check Network Settings!</value></string>
+  <string><id>13296</id><value>Xbox is Connected</value></string>
+  <string><id>13297</id><value>Xbox is not Connected. Check Network Settings.</value></string>
   <string><id>13298</id><value>XBLIVE Key:</value></string>
 
   <string><id>15213</id><value>[PLACEHOLDER]</value></string>
